--- a/src/screens/Question/styles.scss
+++ b/src/screens/Question/styles.scss
@@ -1,10 +1,5 @@
 @import '../../css/mixins';
-
-$correct_answer: #61bf4b;
-$wrong_answer: #c6513e;
-$button_color: #3a64c0;
-$background_color: #faf9fe;
-$alert_color: #BCCC45;
+@import '../../css/variables';
 
 .question {
     @include flexCenter(column);
