--- a/src/screens/End/styles.css
+++ b/src/screens/End/styles.css
@@ -1,4 +1,4 @@
-.set-question {
+.end {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,35 +15,39 @@
   margin-top: -20px;
 }
 
-.set-question .logo {
+.end .logo {
   width: 400px;
 }
 
-.set-question h1 {
+.end h1 {
   margin-top: 20px;
   font-weight: 400;
-  font-size: 28px;
+  font-size: 32px;
 }
 
-.set-question .difficulty {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background: url("../../images/keyboard_arrow_down.png") no-repeat right;
-  background-color: #e8e3fa;
-  border-radius: 8px;
-  border: 0;
-  padding: 24px 36px;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  font-size: 20px;
-  width: 12em;
-  color: #272425;
-  -webkit-transition: all ease .3s;
-  transition: all ease .3s;
+.end h2 {
+  margin-top: 15px;
+  font-weight: 400;
 }
 
-.set-question .begin {
+.end .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+}
+
+.end .buttons .button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,10 +75,18 @@
   transition: all ease .5s;
 }
 
-.set-question .begin:hover {
+.end .buttons .button:hover {
   border: solid;
   border-color: #272425;
   color: #272425;
   background-color: #faf9fe;
+}
+
+.end .buttons .button p {
+  margin-left: 8px;
+}
+
+.end .buttons .button span {
+  margin-left: -8px;
 }
 /*# sourceMappingURL=styles.css.map */
