--- a/src/screens/Question/styles.scss
+++ b/src/screens/Question/styles.scss
@@ -153,6 +153,7 @@
         border-radius: 50px;
         font-size: 24px;
         border: solid;
+        border-color: $button_color;
         transition: all ease .5s;
 
         &:hover {
