--- a/src/screens/Question/styles.css
+++ b/src/screens/Question/styles.css
@@ -12,7 +12,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: -20px;
+  margin-top: 40px;
 }
 
 .question .logo {
@@ -20,9 +20,12 @@
 }
 
 .question h1 {
-  margin-top: 20px;
+  margin-top: 1.2rem;
+  margin-bottom: .8rem;
   font-weight: 400;
   font-size: 32px;
+  width: 50vw;
+  text-align: center;
 }
 
 .question .result {
@@ -160,7 +163,8 @@
 }
 
 .question .cards {
-  margin-top: 20px;
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 
 .question .cards .card {
@@ -226,7 +230,8 @@
 
 .question .send {
   cursor: pointer;
-  margin-top: 20px;
+  margin-top: 1.2rem;
+  margin-bottom: 2rem;
   color: #fff;
   background-color: #3a64c0;
   width: 300px;
