--- a/src/screens/Question/styles.scss
+++ b/src/screens/Question/styles.scss
@@ -3,16 +3,19 @@
 
 .question {
     @include flexCenter(column);
-    margin-top: -20px;
+    margin-top: 40px;
 
     .logo {
         width: 400px;
     }
 
     h1 {
-        margin-top: 20px;
+        margin-top: 1.2rem;
+        margin-bottom: .8rem;
         font-weight: 400;
         font-size: 32px;
+        width: 50vw;
+        text-align: center;
     }
 
     .result {
@@ -86,7 +89,8 @@
     }
 
     .cards {
-        margin-top: 20px;
+        margin-top: 1.2rem;
+        margin-bottom: 1.2rem;
         .card {
             cursor: pointer;
             display: flex;
@@ -145,7 +149,8 @@
 
     .send {
         cursor: pointer;
-        margin-top: 20px;
+        margin-top: 1.2rem;
+        margin-bottom: 2rem;
         color: #fff;
         background-color: $button_color;
         width: 300px;
