--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -4,3 +4,31 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin defaultButtonStyle() {
+    @include flexCenter();
+    cursor: pointer;
+    margin-top: 20px;
+    color: #fff;
+    background-color: $button_color;
+    width: 300px; 
+    height: 60px;
+    border-radius: 50px;
+    font-size: 24px;
+    border: solid;
+    border-color: $button_color;
+    transition: all ease .5s;
+
+    &:hover {
+        border: solid;
+        border-color: $dark;
+        color: $dark;
+        background-color: $background_color;
+    }
+    p {
+        margin-left: 8px;
+    }
+    span {
+        margin-left: -8px;
+    }
+}
