--- a/src/screens/End/styles.scss
+++ b/src/screens/End/styles.scss
@@ -4,9 +4,13 @@
 .end {
     @include flexCenter(column);
     margin-top: 40px;
+    text-align: center;
 
     .logo {
         width: 400px;
+        @media (max-width: 900px) {
+            width: 350px;
+        }
     }
 
     h1 {
@@ -24,31 +28,7 @@
         @include flexCenter(column);
         margin-top: 20px;
         .button {
-            @include flexCenter();
-            cursor: pointer;
-            margin-top: 20px;
-            color: #fff;
-            background-color: $button_color;
-            width: 300px;
-            height: 60px;
-            border-radius: 50px;
-            font-size: 24px;
-            border: solid;
-            border-color: $button_color;
-            transition: all ease .5s;
-
-            &:hover {
-                border: solid;
-                border-color: $dark;
-                color: $dark;
-                background-color: $background_color;
-            }
-            p {
-                margin-left: 8px;
-            }
-            span {
-                margin-left: -8px;
-            }
+            @include defaultButtonStyle();
         }
     }
 }
