--- a/src/screens/Question/styles.css
+++ b/src/screens/Question/styles.css
@@ -19,18 +19,31 @@
   width: 400px;
 }
 
+@media (max-width: 900px) {
+  .question .logo {
+    width: 350px;
+  }
+}
+
 .question h1 {
   margin-top: 1.2rem;
   margin-bottom: .8rem;
   font-weight: 400;
-  font-size: 32px;
+  font-size: 2rem;
   width: 50vw;
   text-align: center;
 }
 
+@media (max-width: 900px) {
+  .question h1 {
+    font-size: 1.8rem;
+    width: 80vw;
+  }
+}
+
 .question .result {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   margin: 0;
   top: 0;
   padding: 0;
@@ -182,12 +195,18 @@
   margin-top: 10px;
   /* 558x63 */
   width: 35vw;
-  height: 63px;
+  height: 5rem;
   border-radius: 5px;
   -webkit-box-shadow: 5px 2px 8px rgba(0, 0, 0, 0.15);
           box-shadow: 5px 2px 8px rgba(0, 0, 0, 0.15);
   -webkit-transition: all ease .3s;
   transition: all ease .3s;
+}
+
+@media (max-width: 900px) {
+  .question .cards .card {
+    width: 80vw;
+  }
 }
 
 .question .cards .card svg {
