--- a/src/screens/Question/styles.scss
+++ b/src/screens/Question/styles.scss
@@ -7,20 +7,28 @@
 
     .logo {
         width: 400px;
+
+        @media (max-width: 900px) {
+            width: 350px;
+        }
     }
 
     h1 {
         margin-top: 1.2rem;
         margin-bottom: .8rem;
         font-weight: 400;
-        font-size: 32px;
+        font-size: 2rem;
         width: 50vw;
         text-align: center;
+        @media (max-width: 900px) {
+            font-size: 1.8rem;
+            width: 80vw;
+        }
     }
 
     .result {
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
         margin: 0;
         top: 0;
         padding: 0;
@@ -100,10 +108,14 @@
             margin-top: 10px;
             /* 558x63 */
             width: 35vw;
-            height: 63px;
+            height: 5rem;
             border-radius: 5px;
             box-shadow: 5px 2px 8px rgba(0, 0, 0, .15);
             transition: all ease .3s;
+            
+            @media (max-width: 900px) {
+                width: 80vw;
+            }
 
             svg {
                 margin-left: 20px;
